web/static/css/_global.scss
/* ... */
.survey-questionnaires {
  .tooltip-error {
    position: relative;
    &:after {
      content: '';
      @extend .back-error;
      display: block;
      border-radius: 50%;
      width: 12px;
      height: 12px;
      position: absolute;
      top: 3px;
      right: -20px;
    }
  }
}

.questionnaire-tooltip-error {
  position: relative;
  &:after {
    content: '';
    @extend .back-error;
    display: block;
    border-radius: 50%;
    width: 12px;
    height: 12px;
  }
}

.wizard-content {
  > div {
    min-height: 110vh;
  }
}

.step-mode {
  position: relative;

  .dropdown-button {
    @extend .black-text;
  }
  i.right {
    @extend .grey-text, .lighten-1;
    margin: 0;
  }
  .dropdown-content.active {
    @extend .z-depth-4;
    border-radius: 4px;
    top: -20px !important;
    left: -8px !important;
    min-width: 220px;
    i {
      min-width: 22px;
      &.right {
        @extend .black-text;
      }
    }
    > li > a {
      @extend .black-text;
    }
  }
  &.underlined {
    border-bottom: 1px solid color('grey','lighten-2');
    display: inline-block;
    padding-bottom: 5px;
    span {
      i {
        vertical-align: text-bottom;
      }
    }
  }
}

.character-counter {
  float: right;
  height: 1px;
  font-size: 10px;
}


  // ------- Questionnaires language selector ----------

  .language-selection {
    position: relative;
    .language-dropdown {
      position: absolute;
      width: 100%;
      max-height: 280px;
      li {
        line-height: 3;
        padding: 0 1rem;
      }
    }
  }

  .var-dropdown {
    position: absolute;
    width: 100%;
    max-height: 280px;
    li {
      line-height: 3;
      padding: 0 1rem;
    }
  }

  .selected-language {
    li {
      position: relative;
      line-height: 54px;
      padding-left: 30px;
      height: 54px;
      span {
        @extend .truncate;
        width: 70%;
      }
      i {
        @extend .grey-text;
        position: absolute;
        top: 15px;
        right: 0px;
      }
      .right-arrow {
        cursor: pointer;
      }
    }
  }

  .languages {
    .tooltip-error {
      position: relative;
      &:after {
        content: '';
        @extend .back-error;
        display: block;
        border-radius: 50%;
        width: 12px;
        height: 12px;
        position: absolute;
        top: 20px;
        right: 36px;
      }
    }
  }

  .other-languages-list {
    li {
      position: relative;
      padding-left: 30px;
      height: 54px;
      span {
        line-height: 54px;
        i {
          @extend .grey-text;
        }
      }
      .remove-language {
        position: absolute;
        left: 10px;
        top: 6px;
        cursor: pointer;
        opacity: 0;
      }
      .language-name {
        @extend .truncate;
        padding-left: 15px;
        width: 70%;
      }
      .set-default-language {
        position: absolute;
        right: 2rem;
        top: 8px;
        cursor: pointer;
        opacity: 0;

      }
      .right-arrow {
        position: absolute;
        top: 8px;
        right: 0px;
        cursor: pointer;
      }
      &:hover {
        @extend .grey, .lighten-2;
        .set-default-language,
         .remove-language {
          opacity: 1;
        }

      }
    }
  }

  .active-language {
    @extend .grey, .lighten-2;
  }

  // ------- / Questionnaires language selector ----------


.collapsible { // class for collapsed questionnaires
  @include transition(all ease-in-out .25s);
  li {
    border-bottom: 1px solid color("grey", "lighten-2");
    .card {
      @extend .z-depth-0;
      margin: 0;
      border-radius: 0;
      .card-content.closed-step {
        padding: 0;
        a {
          @extend .black-text;
          @extend .clearfix;
          font-size: 20px;
          display: block;
          padding: 25px 15px 25px 20px;
          i {
            padding-top: 4px;
          }
          span {
            @extend .truncate;
            width: 83%;
            float: left;
          }
        }
      }
    }
    &:first-child .card {
      border-radius: 3px 3px 0 0;
    }
    &:last-child {
      border-bottom: none;
      .card {
        border-radius: 0 0 3px 3px;
      }
    }
  }
  &.dark { // this class 'dark' is for quotas and error cards when collapsed
    @extend .z-depth-0;
    border: none;
    li .card {
      border-radius: 3px;
      @extend .grey, .lighten-2;
      .card-content.closed-step {
        .text-error {
          @extend .text-error;
        }
      }
    }
  }
}

.collection-item.header {
  padding: 25px 15px 25px 9px;
  height: 80px;
  .material-icons.prefix {
    @extend .grey-text, .lighten-2;
    font-size: 1.6rem;
    top: 1.8rem;
  }
  input[type=text] {
    font-size: 20px;
    border-bottom: none;
    width: 78%;
    margin-bottom: 0px;
    margin-top: -10px;
    margin-left: 15px;
  }
  .collapse {
    @extend .grey-text, .lighten-2;
    margin-right: -10px;
  }
  .dropdown-content li a, .dropdown-button {
    @extend .black-text;
  }
  .row , input {
    margin-bottom: 0;
  }
  a.page-title {
    @extend .black-text;
    font-size: 20px;
    line-height: 1.35;
    max-width: 80%;
    margin-left: 15px;
    float: left;
    i {
      @extend .grey-text, .lighten-2;
      font-size: 24px;
      display: inline-block;
      vertical-align: top;
      margin-left: 15px;
    }
  }
}
/* ... */

